@@ -29,8 +29,8 @@ public:
     std::copy(arg__base, arg__base+(3), _base);
     std::copy(arg__scale, arg__scale+(3), _scale);
   }
-  ndarray<float, 1> base() const { return make_ndarray(&_base[0], NRANGES); }
-  ndarray<float, 1> scale() const { return make_ndarray(&_scale[0], NRANGES); }
+  ndarray<float, 1> base() const { return make_ndarray(const_cast<float*>(&_base[0]), NRANGES); }
+  ndarray<float, 1> scale() const { return make_ndarray(const_cast<float*>(&_scale[0]), NRANGES); }
   static uint32_t _sizeof()  { return (((((0+(4*(NRANGES)))+(4*(NRANGES)))+4)-1)/4)*4; }
 private:
   float	_base[NRANGES];
@@ -58,8 +58,8 @@ public:
     std::copy(arg__base, arg__base+(16), _base);
     std::copy(arg__scale, arg__scale+(16), _scale);
   }
-  ndarray<float, 1> base() const { return make_ndarray(&_base[0], NRANGES); }
-  ndarray<float, 1> scale() const { return make_ndarray(&_scale[0], NRANGES); }
+  ndarray<float, 1> base() const { return make_ndarray(const_cast<float*>(&_base[0]), NRANGES); }
+  ndarray<float, 1> scale() const { return make_ndarray(const_cast<float*>(&_scale[0]), NRANGES); }
   static uint32_t _sizeof()  { return (((((0+(4*(NRANGES)))+(4*(NRANGES)))+4)-1)/4)*4; }
 private:
   float	_base[NRANGES];
@@ -140,7 +140,7 @@ public:
   {
     std::copy(arg__channel, arg__channel+(4), _channel);
   }
-  ndarray<float, 1> channel() const { return make_ndarray(&_channel[0], NCHANNELS); }
+  ndarray<float, 1> channel() const { return make_ndarray(const_cast<float*>(&_channel[0]), NCHANNELS); }
   float sum() const { return _sum; }
   float xpos() const { return _xpos; }
   float ypos() const { return _ypos; }
